# ChemProjector

./: AGENTS.md  env.yml  pyproject.toml  requirements.txt  train.py
chemprojector/chem/: featurize.py
chemprojector/data/: common.py  projection_dataset.py
chemprojector/models/: wrapper.py
chemprojector/utils/: image.py  train.py
configs/: original_default.yml
